@@ -292,34 +292,34 @@ AudioContent::add_properties (list<UserProperty>& p) const
 	}
 
 	if (stream) {
-		p.push_back (UserProperty (_("Audio"), _("Channels"), stream->channels ()));
-		p.push_back (UserProperty (_("Audio"), _("Content audio sample rate"), stream->frame_rate(), _("Hz")));
+		p.push_back (UserProperty (UserProperty::AUDIO, _("Channels"), stream->channels ()));
+		p.push_back (UserProperty (UserProperty::AUDIO, _("Content audio sample rate"), stream->frame_rate(), _("Hz")));
 	}
 
 	FrameRateChange const frc (_parent->active_video_frame_rate(), _parent->film()->video_frame_rate());
 	ContentTime const c (_parent->full_length(), frc);
 
 	p.push_back (
-		UserProperty (_("Length"), _("Full length in video frames at content rate"), c.frames_round(frc.source))
+		UserProperty (UserProperty::LENGTH, _("Full length in video frames at content rate"), c.frames_round(frc.source))
 		);
 
 	if (stream) {
 		p.push_back (
 			UserProperty (
-				_("Length"),
+				UserProperty::LENGTH,
 				_("Full length in audio samples at content rate"),
 				c.frames_round (stream->frame_rate ())
 				)
 			);
 	}
 
-	p.push_back (UserProperty (_("Audio"), _("DCP frame rate"), resampled_frame_rate (), _("Hz")));
-	p.push_back (UserProperty (_("Length"), _("Full length in video frames at DCP rate"), c.frames_round (frc.dcp)));
+	p.push_back (UserProperty (UserProperty::AUDIO, _("DCP frame rate"), resampled_frame_rate (), _("Hz")));
+	p.push_back (UserProperty (UserProperty::LENGTH, _("Full length in video frames at DCP rate"), c.frames_round (frc.dcp)));
 
 	if (stream) {
 		p.push_back (
 			UserProperty (
-				_("Length"),
+				UserProperty::LENGTH,
 				_("Full length in audio samples at DCP rate"),
 				c.frames_round (resampled_frame_rate ())
 				)
